:bug: Flickering fixed

--- a/src/WorldMap/WorldMap.scss
+++ b/src/WorldMap/WorldMap.scss
@@ -10,8 +10,8 @@
   }
 }
 
-.mapboxgl-ctrl.mapboxgl-ctrl-attrib {
-  position: absolute;
-  right: 1rem;
-  bottom: 1rem;
-}
+// .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
+//   position: absolute;
+//   right: 1rem;
+//   bottom: 1rem;
+// }
